adds rhaenyra bio & status button functionality

--- a/index.html
+++ b/index.html
@@ -13,12 +13,14 @@
 <body>
     <h1>House of the Dragon</h1>
     <div class="card-grid">
-        <div class="card rhaenyra">
-            <h2>Rhaenyra Targaryen</h2>
+        <div class="card rhaenyra" id="rhaenyraCard">
+            <div class="alive-or-dead" id="rhaenyraAOD">
+                <h2>Rhaenyra Targaryen</h2>
+            </div>
             <img src="https://media-cldnry.s-nbcnews.com/image/upload/t_fit-760w,f_auto,q_auto:best/rockcms/2022-08/emma-d-arcy-princess-rhaenyra-targaryen-house-of-the-dragon-hbo-bo-2220810-391986.jpg" alt="Rhaenyra Targaryen">
             <div class="button-box">
-                <button class="bio">Bio</button>
-                <button class="status">Status</button>
+                <button class="bio" id="rhaenyra-bio-button">Bio</button>
+                <button class="status" id="rhaenyra-status-button">Status</button>
             </div>
         </div>
         <div class="card alicent">
