adds search functionality

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 <body>
     <h1>House of the Dragon</h1>
+    <input type="text" placeholder="Search..." id="search-input">
     <div class="card-grid">
         <div class="card rhaenyra" id="rhaenyraCard">
             <div class="alive-or-dead" id="rhaenyraAOD">
@@ -23,7 +24,7 @@
                 <button class="status" id="rhaenyra-status-button">Status</button>
             </div>
         </div>
-        <div class="card alicent">
+        <div class="card alicent" id="alicentCard">
             <h2>Alicent Hightower</h2>
             <img src="https://media-cldnry.s-nbcnews.com/image/upload/t_fit-760w,f_auto,q_auto:best/rockcms/2022-08/olivia-cooke-alicent-hightower-house-of-the-dragon-hbo-bo-2220810-6ba24d.jpg" alt="Alicent Hightower">
             <div class="button-box">
@@ -31,7 +32,7 @@
                 <button class="status">Status</button>
             </div>
         </div>
-        <div class="card viserys">
+        <div class="card viserys" id="viserysCard">
             <h2>King Viserys</h2>
             <img src="https://media-cldnry.s-nbcnews.com/image/upload/rockcms/2022-08/paddy-considine-king-viserys-targaryen-house-of-the-dragon-hbo-bo-2220810-595036.jpg" alt="Viserys Targaryen">
             <div class="button-box">
@@ -39,7 +40,7 @@
                 <button class="status">Status</button>
             </div>
         </div>
-        <div class="card daemon">
+        <div class="card daemon" id="daemonCard">
             <h2>Daemon Targaryen</h2>
             <img src="https://media-cldnry.s-nbcnews.com/image/upload/t_fit-760w,f_auto,q_auto:best/rockcms/2022-08/matt-smith-prince-daemon-targaryen-house-of-the-dragon-hbo-bo-2220810-8fd214.jpg" alt="Daemon Targaryen">
             <div class="button-box">
@@ -47,7 +48,7 @@
                 <button class="status">Status</button>
             </div>
         </div>
-        <div class="card corlys">
+        <div class="card corlys" id="corlysCard">
             <h2>Corlys Velaryon</h2>
             <img src="https://media-cldnry.s-nbcnews.com/image/upload/t_fit-760w,f_auto,q_auto:best/rockcms/2022-08/steve-toussaint-lord-corlys-velaryon-house-of-the-dragon-hbo-bo-2220810-80fef0.jpg" alt="Corlys Velaryon">
             <div class="button-box">
@@ -55,7 +56,7 @@
                 <button class="status">Status</button>
             </div>
         </div>
-        <div class="card rhaenys">
+        <div class="card rhaenys" id="rhaenysCard">
             <h2>Rhaenys Targaryen</h2>
             <img src="https://media-cldnry.s-nbcnews.com/image/upload/t_fit-760w,f_auto,q_auto:best/rockcms/2022-08/eve-best-princess-rhaenys-targaryen-house-of-the-dragon-hbo-bo-2220810-33dea9.jpg" alt="Rhaenys Targaryen">
             <div class="button-box">
